--- a/structure/pieces/views/entity/tabs.dust
+++ b/structure/pieces/views/entity/tabs.dust
@@ -1,6 +1,15 @@
 {! HAS ONE !}
 {@eq key=tabType value="hasOne"}
 	{@select key=subentity}
+		{@eq value="e_custom"}
+			{! CUSTOM HAS ONE DISPLAY !}
+			<div id="fields">
+				<div class="form-group">
+					<label>Field</label>
+					<input class="form-control">
+				</div>
+			</div>
+		{/eq}
 		{@none}
 			{#isEmpty}
 				{#__ key="message.empty" /}<br>
