--- a/structure/pieces/views/entity/tabs.dust
+++ b/structure/pieces/views/entity/tabs.dust
@@ -1,82 +1,4 @@
-{! HAS ONE !}
-{@eq key=tabType value="hasOne"}
-	{@select key=subentity}
-		{@eq value="e_custom"}
-			{! CUSTOM HAS ONE DISPLAY !}
-			<div id="fields">
-				<div class="form-group">
-					<label>Field</label>
-					<input class="form-control">
-				</div>
-			</div>
-		{/eq}
-		{@none}
-			{#isEmpty}
-				{#__ key="message.empty" /}<br>
-				{! create btn !}
-				<a data-href="{subentity}/create_form?{associationHref}" class="ajax btn btn-success">
-					<i class="fa fa-plus fa-md">&nbsp;&nbsp;</i>
-					<span>{#__ key="button.create"/}</span>
-				</a>
-			{:else}
-				{! fields !}
-				{>"{subentity}/show_fields" ajaxDisplay="true" /}
-				{! update btn !}
-				<a style="margin-right:8px;" data-href="/{subentity}/update_form?id={data.id}&{associationHref}" href="#" class="ajax btn btn-warning">
-					<i class="fa fa-pencil fa-md">&nbsp;&nbsp;</i>
-					<span>{#__ key="button.update"/}</span>
-				</a>
-				{! delete btn !}
-				<form action="/{subentity}/delete" class="ajax" method="post">
-					<button class="btn btn-danger btn-confirm">
-						<i class="fa fa-trash-o fa-md">&nbsp;&nbsp;</i>
-						<span>{#__ key="button.delete" /}</span>
-					</button>
-					<input name="id" value={data.id} type="hidden">
-				</form>
-			{/isEmpty}
-		{/none}
-	{/select}
-{/eq}
+{! Include default tabs content !}
+{>"tabs_layout" /}
 
-{! HAS MANY !}
-{@eq key=tabType value="hasMany"}
-	{@select key=subentity}
-		{@none}
-			{>"{subentity}/list_fields" ajaxDisplay="true" /}
-			{! create btn !}
-			<a data-href="{subentity}/create_form?{associationHref}" class="ajax btn btn-success">
-				<i class="fa fa-plus fa-md">&nbsp;&nbsp;</i>
-				<span>{#__ key="button.create"/}</span>
-			</a>
-		{/none}
-	{/select}
-{/eq}
-
-{! HAS MANY PRESET !}
-{@eq key=tabType value="hasManyPreset"}
-	{@select key=subentity}
-		{@none}
-			{>"{subentity}/list_fields" ajaxDisplay="true" /}
-			{! create btn !}
-			<a data-href="{subentity}/create_form?{associationHref}" class="ajax btn btn-success">
-				<i class="fa fa-plus fa-md">&nbsp;&nbsp;</i>
-				<span>{#__ key="button.create"/}</span>
-			</a>
-		{/none}
-	{/select}
-{/eq}
-
-{! LOCAL FILE STORAGE !}
-{@eq key=tabType value="localfilestorage"}
-	{@select key=subentity}
-		{@none}
-			{>"{subentity}/list_fields" ajaxDisplay="true" /}
-			{! create btn !}
-			<a data-href="{subentity}/create_form?{associationHref}" class="ajax btn btn-success">
-				<i class="fa fa-plus fa-md">&nbsp;&nbsp;</i>
-				<span>{#__ key="button.create"/}</span>
-			</a>
-		{/none}
-	{/select}
-{/eq}
+{! Override tab definition here !}
